assets/css/style.css
h1, .genre {
    font-size: 2em;
    color: #1E152A;
    font-weight: bold;
}

#time {
    margin-top: 1em; 
}

#main {
    margin-bottom: 2em;
}

#navbar {
    background-image: linear-gradient(#f15a02, #ff7700);
    margin-bottom: 2em;
}

.navbar-menu {
    background-image: linear-gradient(#ff8800, #ff9900);
    background-color: #ff9900;
}

#searchMenu {
  background-color: #ff9900;  
  box-shadow: 1px 1px 10px 2px #888888;
}

.level-item {
    height: 2em;
    font-size: 2.5em;
    font-weight: bold;
    color: #1E152A;
}

#book-to-clone {
    display: none;
}

